--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -389,7 +389,12 @@ hr {
 .u-cf {
   content: "";
   display: table;
-  clear: both; }
+  clear: both; 
+  padding-left: 10%;
+  padding-right: 10%;
+  margin-right: 10%;
+  margin-left: 10%;
+}
 
 
 /* Media Queries
