--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -49,7 +49,7 @@
 }
 
 /* For devices larger than 550px */
-@media (min-width: 550px) {
+@media (min-width: 850px) {
   .container {
     width: 80%; }
   .column,
@@ -206,7 +206,7 @@ input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary {
   color: #FFF;
-  background-color: #33C3F0;
+  background-color: #FEFBF4;
   border-color: #33C3F0; }
 .button.button-primary:hover,
 button.button-primary:hover,
@@ -219,7 +219,7 @@ input[type="submit"].button-primary:focus,
 input[type="reset"].button-primary:focus,
 input[type="button"].button-primary:focus {
   color: #FFF;
-  background-color: #1EAEDB;
+  background-color: #FEFBF4;
   border-color: #1EAEDB; }
 
 
