--- a/css/styles.css
+++ b/css/styles.css
@@ -75,11 +75,22 @@ h5{
 }
 
 #logo{
-  width: 30%;
+  width: 120px;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
   margin-top: 3%;
+}
+
+.navlogo {
+  width: 120px;
+  margin: 0 auto;
+}
+
+.pull-right {
+  float: right;
+}
+
+#log-in {
+  margin-top: -80px;
 }
 
 #arrow{
@@ -103,6 +114,10 @@ h5{
 #hero{
   height: 80%;
   padding: 30px;
+}
+
+#hero h1 {
+  margin-top: 40px;
 }
 
 #footer{
