--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,27 @@ body {
   float: right;
 }
 
+.form-footer {
+  float: right;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.footer-logo {
+  width: 50px;
+}
+
+.legal {
+  vertical-align: top;
+  padding: 0;
+  width: 70%;
+  float: right;
+}
+
+.links {
+  padding-top: 20px;
+}
+
 .mini-margin {
   margin-bottom: 10px;
 }
@@ -124,13 +145,8 @@ h5{
 
 #footer{
   background-color: #FEFBF4;
-  height: 5%;
-  padding: 2%;
 }
 
-#footer-logo{
-  width: 70px;
-}
 
 #CTA{
   background-color: #4EB96E;
