Updated top background image

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,8 +112,9 @@ h5{
 }
 
 #hero{
-  height: 80%;
   padding: 30px;
+  background-image: url(/images/workstation.jpg);
+  background-size: cover;
 }
 
 #hero h1 {
