--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,12 @@ body {
 
 }
 
+ #hero{
+      padding: 30px;
+      background-image: url(/images/workstation.jpg);
+      background-size: cover;
+    }
+
 .form-cta {
   float: left;
   width: 100%;
